// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Is bold anchor 1`] = `
.emotion-0 {
  font-size: inherit;
  border: none;
  background: transparent;
  color: #0085dd;
  font-weight: 500;
}

.emotion-0:hover {
  color: #004380;
}

<a
  className="emotion-0"
  href="http://test.com"
>
  Link
</a>
`;

exports[`Is uppercased anchor 1`] = `
.emotion-0 {
  font-size: inherit;
  border: none;
  background: transparent;
  color: #0085dd;
  text-transform: uppercase;
}

.emotion-0:hover {
  color: #004380;
}

<a
  className="emotion-0"
  href="http://test.com"
>
  Link
</a>
`;
